[20241031]프로젝트 생성 및 조회